tests/integration/snapshots/integration__conformance__n_number_neg_with_garbage_at_end.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[-1x]
stdout --- 
<empty>
stderr --- 
error: unexpected character `x`. expected start of a json value
 --> stdin:1:4
  |
1 | [-1x]
  |    ^
